@@ -4734,3 +4734,5 @@ Changelog for GXemul:
 20180924	Oops, forgot to add machine_rpi.cc back in 20131006.
 20180925	Cleaning up some more files on make clean_all. Thanks to
 		Göran Weinholt for noticing.
+20180927	Fixing big-endian ARM loads/stores (except perhaps double-word
+		loads and stores); probably slows everything down a bit.
